--- a/views/loginPage.handlebars
+++ b/views/loginPage.handlebars
@@ -3,14 +3,14 @@
     <h1 class="font-bold text-4xl mb-2 text-center">Escape Me</h1>
     <h3 class="text-lg font-bold mb-6 text-center">Virtual Escape Room Experience</h3>
     <h2 class="font-semibold text-xl mb-2">Login</h2>
-    <form>
+    <form id="login-form">
       <div class="mb-4">
         <label for="email" class="block text-sm font-semibold mb-2">Email</label>
-        <input type="email" id="email" name="email" class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500" required>
+        <input type="email" id="email-login" name="email" class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500" required>
       </div>
       <div class="mb-4">
         <label for="password" class="block text-sm font-semibold mb-2">Password</label>
-        <input type="password" id="password" name="password" class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500" required>
+        <input type="password" id="password-login" name="password" class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500" required>
       </div>
       <div class="flex items-center justify-between mb-4">
         <div>
@@ -24,4 +24,4 @@
   </div>
 </div>
 
-  <script src=""></script>
+  <script src="/js/login.js"></script>
