updates footer in main layout

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,8 +24,17 @@
   </header>
     </header>
     <main>{{{ body }}}</main>
-    <footer class=" bg-blue-500 font-bold text-white text-center py-5">
-        <h4>Made with &#10084;&#65039; - Omar</h4>
+    <footer class="bg-blue-500 text-white py-6 px-4">
+      <div class="text-center">
+        <p class="text-xl">
+          &copy; 2023 Virtual Escape Room Booking System. All Rights Reserved.
+        </p>
+        <div class="mt-4">
+          <a href="/about" class="mr-4">About</a>
+          <a href="/contact" class="mr-4">Contact</a>
+          <a href="/faq">FAQ</a>
+        </div>
+      </div>
     </footer>
 </body>
 </html>
