--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,7 @@
     <header>
         <header class="bg-blue-500">
     <nav class="container mx-auto flex justify-between items-center p-4">
-      <a href="#" class="w-4/5 text-white font-bold text-4xl">Escape Me</a>
+      <a href="/" class="w-4/5 text-white font-bold text-4xl">Escape Me</a>
        <button class="text-white w-1/5 text-5xl  flex justify-center pb-2" id="menu-toggle">
           &#9776;
         </button>
