--- a/views/signupPage.handlebars
+++ b/views/signupPage.handlebars
@@ -18,7 +18,7 @@
       </div>
       <div class="mb-4">
         <label for="password_confirmation" class="block text-sm font-semibold mb-2">Confirm Password</label>
-        <input type="password" id="password-confirmation" name="password_confirmation" class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500" required>
+        <input type="password" id="confirmpassword-signup" name="password_confirmation" class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500" required>
       </div>
       <button type="submit" class="w-full bg-blue-500 text-white font-semibold py-2 rounded hover:bg-blue-600">Sign Up</button>
     </form>
@@ -27,3 +27,5 @@
     </div>
   </div>
 </div>
+
+<script src="/js/signup.js"></script>
