adds placeholder images to welcome page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,9 +11,9 @@
 <body>
     <header>
         <header class="bg-blue-500">
-    <nav class="container mx-auto flex justify-between items-center p-4">
-      <a href="/" class="w-4/5 text-white font-bold text-4xl">Escape Me</a>
-       <button class="text-white w-1/5 text-5xl  flex justify-center pb-2" id="menu-toggle">
+    <nav class="container mx-auto flex justify-between items-center text-slate-50 p-4">
+      <a href="/" class="w-4/5 font-bold text-4xl">Escape Me</a>
+       <button class=" w-1/5 text-5xl  flex justify-center pb-2" id="menu-toggle">
           &#9776;
         </button>
         <div class="dropdown-menu hidden bg-blue-500 text-white rounded py-2 absolute right-0 top-20 z-10 text-center" id="dropdown-menu">
