--- a/views/welcomePage.handlebars
+++ b/views/welcomePage.handlebars
@@ -1,4 +1,5 @@
-<section class="text-black text-center py-8">
+<div class="bg-gray-100">
+<section class="text-slate-950 text-center py-8 ">
       <h1 class="text-4xl font-bold text-center">
         Experience Thrilling Virtual Escape Rooms with Friends!
       </h1>
@@ -9,16 +10,16 @@
       </p>
       <a
         href="/signup"
-        class="bg-blue-500 text-white font-bold py-3 px-6 mt-6 inline-block rounded"
+        class="bg-blue-500 text-slate-50 font-bold py-3 px-6 mt-6 inline-block rounded"
         >Sign Up Now and Unlock Your Adventure!</a>
     </section>
-    <section class="py-12 px-4">
-      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
-        <div class="bg-white rounded-lg p-6 shadow">
+    <section class="py-12 px-4 ">
+      <div class="grid gap-8 text-slate-950">
+        <div class="bg-white rounded-lg p-6 shadow ">
           <img
-            src="/images/theme1.jpg"
+            src="/img/themes.jpg"
             alt="Escape Room Theme"
-            class="w-full h-48 mb-4 object-cover rounded"
+            class="w-full h-48 mb-4 object-cover rounded bg-contain"
           />
           <h3 class="text-xl font-bold mb-2">Variety of Themes</h3>
           <p>
@@ -28,9 +29,9 @@
         </div>
         <div class="bg-white rounded-lg p-6 shadow">
           <img
-            src="/images/booking.jpg"
+            src="/img/booking.jpg"
             alt="Booking System"
-            class="w-full h-48 mb-4 object-cover rounded"
+            class="w-full h-48 mb-4 object-contain rounded"
           />
           <h3 class="text-xl font-bold mb-2">Easy Booking System</h3>
           <p>
@@ -41,3 +42,4 @@
    
       </div>
     </section>
+    </div>
