--- a/views/loginPage.handlebars
+++ b/views/loginPage.handlebars
@@ -1,5 +1,5 @@
-<div class="bg-gray-100 min-h-screen flex items-center justify-center">
-<div class="bg-white w-full max-w-md p-8 rounded shadow-lg">
+<div class="bg-gray-100 text-slate-950 min-h-screen flex items-center justify-center">
+<div class="bg-white w-full max-w-md p-8 rounded-md mx-2 shadow-lg">
     <h1 class="font-bold text-4xl mb-2 text-center">Escape Me</h1>
     <h3 class="text-lg font-bold mb-6 text-center">Virtual Escape Room Experience</h3>
     <h2 class="font-semibold text-xl mb-2">Login</h2>
@@ -19,7 +19,7 @@
         </div>
         <a href="#" class="text-sm text-blue-500">Forgot password?</a>
       </div>
-      <button type="submit" class="w-full bg-blue-500 text-white font-semibold py-2 rounded hover:bg-blue-600">Login</button>
+      <button type="submit" class="w-full bg-blue-500 text-slate-50 font-semibold py-2 rounded hover:bg-blue-600">Login</button>
     </form>
   </div>
 </div>
