--- a/views/signupPage.handlebars
+++ b/views/signupPage.handlebars
@@ -1,5 +1,5 @@
 <div class="bg-gray-100 min-h-screen flex items-center justify-center">
-  <div class="bg-white w-full max-w-md p-8 rounded shadow-lg">
+  <div class="bg-white w-full p-8 rounded-md mx-2 shadow-lg">
     <h1 class="font-bold text-4xl mb-2 text-center">Escape Me</h1>
     <h3 class="text-lg font-bold mb-6 text-center">Virtual Escape Room Experience</h3>
     <h2 class="font-semibold text-xl mb-2">Sign Up</h2>
