--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,6 +18,7 @@
         </button>
         <div class="dropdown-menu hidden bg-blue-500 text-white rounded py-2 absolute right-0 top-20 z-10 text-center" id="dropdown-menu">
           {{#if logged_in}}
+           <a href="/bookings" class="block px-4 py-2 hover:bg-white hover:text-blue-500">My Bookings</a>
     <a href="/profile" class="block px-4 py-2 hover:bg-white hover:text-blue-500">Profile</a>
     <a href="/settings" class="block px-4 py-2 hover:bg-white hover:text-blue-500">Settings</a>
     <button id="logout" class="block px-4 w-full py-2 hover:bg-white hover:text-blue-500">Logout</button>
