changes blue bg and text color to indigo

--- a/views/welcomePage.handlebars
+++ b/views/welcomePage.handlebars
@@ -10,7 +10,7 @@
       </p>
       <a
         href="/signup"
-        class="bg-blue-500 text-slate-50 font-bold py-3 px-6 mt-6 inline-block rounded"
+        class="bg-indigo-600 text-slate-50 font-bold py-3 px-6 mt-6 inline-block rounded"
         >Sign Up Now and Unlock Your Adventure!</a>
     </section>
     <section class="py-12 px-4 ">
