--- a/views/loginPage.handlebars
+++ b/views/loginPage.handlebars
@@ -6,20 +6,20 @@
     <form id="login-form">
       <div class="mb-4">
         <label for="email" class="block text-sm font-semibold mb-2">Email</label>
-        <input type="email" id="email-login" name="email" class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500" required>
+        <input type="email" id="email-login" name="email" class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:border-indigo-600" required>
       </div>
       <div class="mb-4">
         <label for="password" class="block text-sm font-semibold mb-2">Password</label>
-        <input type="password" id="password-login" name="password" class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:border-blue-500" required>
+        <input type="password" id="password-login" name="password" class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:border-indigo-600" required>
       </div>
       <div class="flex items-center justify-between mb-4">
         <div>
-          <input type="checkbox" id="remember_me" name="remember_me" class="text-blue-500 rounded">
+          <input type="checkbox" id="remember_me" name="remember_me" class="text-indigo-600 rounded">
           <label for="remember_me" class="text-sm">Remember me</label>
         </div>
-        <a href="#" class="text-sm text-blue-500">Forgot password?</a>
+        <a href="#" class="text-sm text-indigo-500">Forgot password?</a>
       </div>
-      <button type="submit" class="w-full bg-blue-500 text-slate-50 font-semibold py-2 rounded hover:bg-blue-600">Login</button>
+      <button type="submit" class="w-full bg-indigo-600 text-slate-50 font-semibold py-2 rounded hover:bg-indigo-700">Login</button>
     </form>
   </div>
 </div>
