updates styling for welcome message in userhomepage

--- a/views/userHomePage.handlebars
+++ b/views/userHomePage.handlebars
@@ -1,8 +1,8 @@
 <!-- Hero Section -->
-<section class="bg-indigo-600 text-white py-20">
-  <div class="container mx-auto text-center">
+<section class="bg-indigo-600 text-white py-5 rounded-lg my-5 mx-3">
+  <div class="container mx-auto text-center mb-2">
     <h1 class="text-4xl font-bold mb-6">Welcome to EscapeMe, [Name of User Here]</h1>
-    <p class="text-lg mb-8">Experience the thrill of our escape rooms and book
+    <p class="text-lg mb-5">Experience the thrill of our escape rooms and book
       your next adventure!</p>
     <a
       href="/booking"
@@ -16,7 +16,7 @@
   <div class="container mx-auto">
     <h2 class="text-4xl font-bold mb-8 text-center">Escape Rooms</h2>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-slate-950">
-        <h3 class="text-2xl font-bold  text-center">Beginner Level:</h3>
+      <h3 class="text-2xl font-bold text-center">Beginner Level:</h3>
       <!-- Begin escape room card loop -->
       <div class="bg-white shadow-lg rounded-lg p-6">
         <img
@@ -54,7 +54,7 @@
           sugar rush ends.</p>
       </div>
 
-      <h3 class="text-2xl font-bold  text-center">Intermediate Level:</h3>
+      <h3 class="text-2xl font-bold text-center">Intermediate Level:</h3>
 
       <div class="bg-white shadow-lg rounded-lg p-6">
         <img
@@ -91,7 +91,7 @@
           the curse before the spirits claim them.</p>
       </div>
 
-      <h3 class="text-2xl font-bold  text-center">Expert Level:</h3>
+      <h3 class="text-2xl font-bold text-center">Expert Level:</h3>
       <div class="bg-white shadow-lg rounded-lg p-6">
         <img
           src="/img/area51.jpeg"
