adds user's name to welcome message in user homepage

--- a/views/userHomePage.handlebars
+++ b/views/userHomePage.handlebars
@@ -1,7 +1,7 @@
 <!-- Hero Section -->
 <section class="bg-indigo-600 text-white py-5 rounded-lg my-5 mx-3">
   <div class="container mx-auto text-center mb-2">
-    <h1 class="text-4xl font-bold mb-6">Welcome to EscapeMe, [Name of User Here]</h1>
+    <h1 class="text-4xl font-bold mb-6">Welcome to EscapeMe, {{name}}</h1>
     <p class="text-lg mb-5">Experience the thrill of our escape rooms and book
       your next adventure!</p>
     <a
