--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
           >
             {{#if logged_in}}
               <a
-                href="/bookings"
+                href="/mybookings"
                 class="block px-4 py-2 hover:bg-slate-50 hover:text-indigo-600"
               >My Bookings</a>
               <a
