--- a/views/booking.handlebars
+++ b/views/booking.handlebars
@@ -13,26 +13,11 @@
           id="escape-room"
           name="escape-room"
         >
-          <!-- Beginner Level -->
-          <option
-            value="The Lost Treasure of Captain
-            Blackbeard"
-          >Beginner: The Lost Treasure of Captain Blackbeard</option>
-          <option value="Mystery at the Museum">Beginner: Mystery at the Museum</option>
-          <option value="roEscape from Candylandom3">Beginner: Escape from
-            Candyland</option>
-
-          <!-- Intermediate Level -->
-          <option value="Secrets of the Pharaoh's Tomb">Intermediate: Secrets of
-            the Pharaoh's Tomb</option>
-          <option value="Time Travel Heist">Intermediate: Time Travel Heist</option>
-          <option value="The Haunted Mansion">Intermediate: The Haunted Mansion</option>
-
-          <!-- Expert Level -->
-          <option value="The Alien Conspiracy">Expert: The Alien Conspiracy</option>
-          <option value="The Impossible Heist">Expert: The Impossible Heist</option>
-          <option value="Mind Maze">Expert: Mind Maze</option>
+          {{#each escapeRooms}}
+            <option value="{{id}}">{{theme}}: {{difficulty}}</option>
+          {{/each}}
         </select>
+
       </div>
 
       <div class="mb-6">
