fixes styling in main layout, welcome, login, and signup

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <header class="bg-indigo-600">
+      <header class="bg-blue-700">
         <nav
           class="container mx-auto flex justify-between items-center text-slate-50 p-4"
         >
@@ -18,47 +18,40 @@
           {{else}}
             <a href="/" class="w-4/5 font-bold text-4xl">Escape Me</a>
           {{/if}}
-          <button
-            class="w-1/5 text-5xl flex justify-center pb-2"
-            id="menu-toggle"
-          >
+          <button class="text-5xl" id="menu-toggle">
             &#9776;
           </button>
           <div
-            class="dropdown-menu hidden bg-indigo-600 text-white rounded py-2 absolute right-0 top-20 z-10 text-center"
+            class="dropdown-menu hidden bg-blue-700 text-white rounded py-2 absolute right-0 top-20 z-10 text-center lg:right-10 lg:text-1xl"
             id="dropdown-menu"
           >
             {{#if logged_in}}
               <a
                 href="/mybookings"
-                class="block px-4 py-2 hover:bg-slate-50 hover:text-indigo-600"
+                class="block px-4 py-2 hover:bg-slate-50 hover:text-blue-700 lg:px-10"
               >My Bookings</a>
               <a
                 href="/profile"
-                class="block px-4 py-2 hover:bg-slate-50 hover:text-indigo-600"
+                class="block px-4 py-2 hover:bg-slate-50 hover:text-blue-700 lg:px-10"
               >Profile</a>
               <a
                 href="/settings"
-                class="block px-4 py-2 hover:bg-slate-50 hover:text-indigo-600"
+                class="block px-4 py-2 hover:bg-slate-50 hover:text-blue-700 lg:px-10"
               >Settings</a>
               <button
                 id="logout"
-                class="block px-4 w-full py-2 hover:bg-slate-50 hover:text-indigo-600"
+                class="block px-4 w-full py-2 hover:bg-slate-50 hover:text-blue-700 lg:px-10"
               >Logout</button>
             {{else}}
               <a
                 href="/signup"
-                class="block px-4 py-2 hover:bg-slate-50 hover:text-indigo-600"
+                class="block px-4 py-2 hover:bg-slate-50 hover:text-indigo-600 lg:px-10"
               >Sign Up</a>
               <a
                 href="/login"
-                class="block px-4 py-2 hover:bg-slate-50 hover:text-indigo-600"
+                class="block px-4 py-2 hover:bg-slate-50 hover:text-indigo-600 lg:px-10"
               >Sign In</a>
             {{/if}}
-            <a
-              href="#"
-              class="block px-4 py-2 hover:bg-slate-50 hover:text-indigo-600"
-            >Report an issue</a>
           </div>
 
           <!--<div class="space-x-4">
@@ -69,7 +62,7 @@
       </header>
     </header>
     <main>{{{body}}}</main>
-    <footer class="bg-indigo-600 text-white py-6 px-4">
+    <footer class="bg-blue-700 text-white py-6 px-4">
       <div class="text-center">
         <p class="text-xl">
           &copy; 2023 Escape Me Virtual Escape Rooms. All Rights Reserved.
