--- a/views/loginPage.handlebars
+++ b/views/loginPage.handlebars
@@ -17,9 +17,9 @@
           <input type="checkbox" id="remember_me" name="remember_me" class="text-indigo-600 rounded">
           <label for="remember_me" class="text-sm">Remember me</label>
         </div>
-        <a href="#" class="text-sm text-indigo-500">Forgot password?</a>
+        {{!-- <a href="#" class="text-sm text-indigo-500">Forgot password?</a> --}}
       </div>
-      <button type="submit" class="w-full bg-indigo-600 text-slate-50 font-semibold py-2 rounded hover:bg-indigo-700">Login</button>
+      <button type="submit" class="w-full bg-blue-700 text-slate-50 font-semibold py-2 rounded hover:bg-blue-800">Login</button>
     </form>
   </div>
 </div>
