--- a/views/signupPage.handlebars
+++ b/views/signupPage.handlebars
@@ -1,5 +1,5 @@
-<div class="bg-gray-100 min-h-screen flex items-center justify-center">
-  <div class="bg-white w-full p-8 rounded-md mx-2 shadow-lg">
+<div class="bg-gray-100 h-screen flex items-center justify-center font-roboto text-slate-950">
+  <div class="mx-5 bg-white w-full max-w-md p-8 rounded-md shadow-lg">
     <h1 class="font-bold text-4xl mb-2 text-center">Escape Me</h1>
     <h3 class="text-lg font-bold mb-6 text-center">Virtual Escape Room Experience</h3>
     <h2 class="font-semibold text-xl mb-2">Sign Up</h2>
@@ -20,10 +20,10 @@
         <label for="password_confirmation" class="block text-sm font-semibold mb-2">Confirm Password</label>
         <input type="password" id="confirmpassword-signup" name="password_confirmation" class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:border-indigo-600" required>
       </div>
-      <button type="submit" class="w-full bg-indigo-600 text-white font-semibold py-2 rounded hover:bg-indigo-700">Sign Up</button>
+      <button type="submit" class="w-full bg-blue-700 text-white font-semibold py-2 rounded hover:bg-blue-800">Sign Up</button>
     </form>
     <div class="mt-4 text-center">
-      <p class="text-sm">Already have an account? <a href="/login" class="text-blue-500">Login</a></p>
+      <p class="text-sm">Already have an account? <a href="/login" class="text-blue-600 hover:text-blue-700">Login</a></p>
     </div>
   </div>
 </div>
