--- a/views/welcomePage.handlebars
+++ b/views/welcomePage.handlebars
@@ -1,45 +1,40 @@
 <div class="bg-gray-100">
-<section class="text-slate-950 text-center py-8 ">
-      <h1 class="text-4xl font-bold text-center">
-        Experience Thrilling Virtual Escape Rooms with Friends!
-      </h1>
-      <p class="text-xl mt-4 text-center">
-        Browse and book from a wide range of virtual escape room themes, invite
-        your friends, and compete on the leaderboards. Discover your next
-        adventure today!
+  <section class="text-slate-950 text-center py-10 w-4/5 mx-auto">
+    <h1 class="text-4xl font-bold text-center py-2">
+      Experience Thrilling Virtual Escape Rooms with Friends!
+    </h1>
+    <p class="text-xl mt-4 text-center">
+      Browse and book from a wide range of virtual escape room themes, invite
+      your friends, and compete on the leaderboards. Discover your next
+      adventure today!
+    </p>
+    <a
+      href="/signup"
+      class="bg-blue-700 text-slate-50 font-bold py-3 px-6 mt-6 inline-block rounded hover:bg-blue-800"
+    >Sign Up Now and Unlock Your Adventure!</a>
+  </section>
+  <section class="py-8 grid grid-cols-1 gap-8 md:grid-cols-2 md:mx-10">
+
+    <div class="rounded-lg bg-white p-6 shadow-lg text-center">
+      <img src="/img/themes.jpg" alt="Escape Room Theme" class="rounded-md mx-auto mb-4" />
+      <h3 class="font-semibold text-3xl mb-4">Variety of Themes</h3>
+      <p class="text-xl">
+        Discover a wide range of immersive and challenging escape room themes,
+        catering to all interests and skill levels.
       </p>
       <a
-        href="/signup"
-        class="bg-indigo-600 text-slate-50 font-bold py-3 px-6 mt-6 inline-block rounded"
-        >Sign Up Now and Unlock Your Adventure!</a>
-    </section>
-    <section class="py-12 px-4 ">
-      <div class="grid gap-8 text-slate-950">
-        <div class="bg-white rounded-lg p-6 shadow ">
-          <img
-            src="/img/themes.jpg"
-            alt="Escape Room Theme"
-            class="w-full h-48 mb-4 object-cover rounded bg-contain"
-          />
-          <h3 class="text-xl font-bold mb-2">Variety of Themes</h3>
-          <p>
-            Discover a wide range of immersive and challenging escape room
-            themes, catering to all interests and skill levels.
-          </p>
-        </div>
-        <div class="bg-white rounded-lg p-6 shadow">
-          <img
-            src="/img/booking.jpg"
-            alt="Booking System"
-            class="w-full h-48 mb-4 object-contain rounded"
-          />
-          <h3 class="text-xl font-bold mb-2">Easy Booking System</h3>
-          <p>
-            Our user-friendly platform makes it simple to browse, book, and
-            manage your escape room experiences.
-          </p>
-        </div>
-   
-      </div>
-    </section>
+      href="/escaperooms"
+      class="bg-blue-700 text-slate-50 font-bold py-3 px-6 mt-6 inline-block rounded hover:bg-blue-800"
+    >View Escape Rooms</a>
     </div>
+    <div class="rounded-lg bg-white p-6 shadow-lg text-center">
+      <img src="/img/booking.jpg" alt="Booking System" class="rounded-md mx-auto mb-4" />
+      <h3 class="font-semibold text-3xl mb-4">Easy Booking System</h3>
+      <p class="text-xl">
+        Our user-friendly platform makes it simple to browse, book, and manage
+        your escape room experiences.
+      </p>
+    </div>
+
+  </section>
+</div>
