--- a/views/adminHome.handlebars
+++ b/views/adminHome.handlebars
@@ -1,26 +1,26 @@
 <div class="bg-gray-100 min-h-screen">
   <section class="text-slate-950 text-center pt-10 pb-5 w-4/5 mx-auto">
-    <h1 class="text-4xl font-bold text-center py-2">
+    <h1 class="text-4xl font-bold text-center py-2 lg:text-6xl">
       Welcome
       {{name}}
       &#128075;
     </h1>
-    <p class="text-xl text-center">
+    <p class="text-xl text-center lg:text-3xl lg:py-5">
       Manage bookings, users, escape rooms, and business hours all from this
       convenient dashboard.
     </p>
   </section>
 
   <section
-    class="py-3 grid grid-cols-1 gap-y-8 md:grid-cols-2 md:mb-24 "
+    class="py-3 grid grid-cols-1 gap-y-8 md:grid-cols-2 md:mb-24 lg:grid-cols-4 lg:mx-8"
   >
     <a href="/admin/bookings"><div
-        class="flex items-center rounded-lg p-5 bg-white text-center mx-5 shadow-lg lg:h-36"
+        class="flex items-center rounded-lg p-5 bg-white text-center mx-5 shadow-lg lg:h-36 lg:mx-5"
       >
         <h3
-          class="font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4 lg:text-3xl"
+          class="font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4 lg:text-4xl"
         >Manage Bookings</h3>
-        <p class="text-lg lg:text-2xl">
+        <p class="text-lg lg:text-3xl">
           View, edit, or cancel bookings.
         </p>
 
@@ -28,35 +28,35 @@
 
     <a href="/admin/users">
       <div
-        class="flex items-center rounded-lg bg-white p-5 mx-5 text-center shadow-lg lg:h-36"
+        class="flex items-center rounded-lg bg-white p-5 mx-5 text-center shadow-lg lg:h-36 lg:mx-5"
       >
         <h3
-          class="font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4 lg:text-3xl"
+          class="font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4 lg:text-4xl"
         >Manage Users</h3>
-        <p class="text-lg lg:text-2xl">View or edit user accounts.</p>
+        <p class="text-lg lg:text-3xl">View or edit user accounts.</p>
       </div>
     </a>
 
     <a href="/admin/rooms">
       <div
-        class="flex items-center rounded-lg p-5 bg-white text-center mx-5 shadow-lg lg:h-36"
+        class="flex items-center rounded-lg p-5 bg-white text-center mx-5 shadow-lg lg:h-36 lg:mx-5"
       >
         <h3
-          class="font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4 lg:text-3xl"
+          class="font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4 lg:text-4xl"
         >Manage Escape Rooms</h3>
-        <p class="text-lg lg:text-2xl">
+        <p class="text-lg lg:text-3xl">
           Add, edit, or temporarily disable rooms.
         </p>
 
       </div></a>
 
     <a href="/admin/hours"><div
-        class="flex items-center rounded-lg p-5 bg-white text-center mx-5 shadow-lg lg:h-36"
+        class="flex items-center rounded-lg p-5 bg-white text-center mx-5 shadow-lg lg:h-36 lg:mx-5"
       >
         <h3
-          class="font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4 lg:text-3xl"
+          class="font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4 lg:text-4xl"
         >Manage Business Hours</h3>
-        <p class="text-lg lg:text-2xl">
+        <p class="text-lg lg:text-3xl">
           Adjust your business hours.
         </p>
 
