margin fix for admin home view

--- a/views/adminHome.handlebars
+++ b/views/adminHome.handlebars
@@ -64,7 +64,7 @@
 
   </section>
 
-  <section class="py-8 grid grid-cols-1 gap-y-8  ">
+  <section class="py-8 grid grid-cols-1 gap-y-8 lg:mx-8 ">
 
     <a href="/admin/notifications"><div
         class="flex items-center rounded-lg p-5 bg-white text-center mx-5 shadow-lg"
