updates styling to make admin home page view web responsive

--- a/views/adminHome.handlebars
+++ b/views/adminHome.handlebars
@@ -1,26 +1,24 @@
 <div class="bg-gray-100 min-h-screen">
   <section class="text-slate-950 text-center pt-10 pb-5 w-4/5 mx-auto">
-    <h1 class="text-4xl font-bold text-center py-2 lg:text-6xl">
+    <h1 class="text-4xl font-bold text-center py-2 lg:text-6xl xl:text-5xl">
       Welcome
       {{name}}
       &#128075;
     </h1>
-    <p class="text-xl text-center lg:text-3xl lg:py-5">
+    <p class="text-xl text-center lg:text-3xl lg:py-5 xl:text-2xl">
       Manage bookings, users, escape rooms, and business hours all from this
       convenient dashboard.
     </p>
   </section>
 
-  <section
-    class="py-3 grid grid-cols-1 gap-y-8 md:grid-cols-2 md:mb-24 lg:grid-cols-4 lg:mx-8"
-  >
+  <section class="py-3 grid grid-cols-1 gap-y-8 md:grid-cols-2 md:mb-24 xl:grid-cols-4 xl:mx-5" >
     <a href="/admin/bookings"><div
-        class="flex items-center rounded-lg p-5 bg-white text-center mx-5 shadow-lg lg:h-36 lg:mx-5"
+        class="flex items-center rounded-lg p-5 bg-white text-center mx-5 shadow-lg hover:border-blue-700/50 hover:border-2 lg:h-36 lg:mx-5 xl:h-32"
       >
         <h3
-          class="font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4 lg:text-4xl"
+          class="font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4 lg:text-3xl xl:text-2xl"
         >Manage Bookings</h3>
-        <p class="text-lg lg:text-3xl">
+        <p class="text-lg lg:text-2xl xl:text-lg">
           View, edit, or cancel bookings.
         </p>
 
@@ -28,35 +26,35 @@
 
     <a href="/admin/users">
       <div
-        class="flex items-center rounded-lg bg-white p-5 mx-5 text-center shadow-lg lg:h-36 lg:mx-5"
+        class="flex items-center rounded-lg bg-white p-5 mx-5 text-center shadow-lg hover:border-blue-700/50 hover:border-2 lg:h-36 lg:mx-5 xl:h-32"
       >
         <h3
-          class="font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4 lg:text-4xl"
+          class="font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4 lg:text-3xl xl:text-2xl"
         >Manage Users</h3>
-        <p class="text-lg lg:text-3xl">View or edit user accounts.</p>
+        <p class="text-lg lg:text-2xl xl:text-lg">View or edit user accounts.</p>
       </div>
     </a>
 
     <a href="/admin/rooms">
       <div
-        class="flex items-center rounded-lg p-5 bg-white text-center mx-5 shadow-lg lg:h-36 lg:mx-5"
+        class="flex items-center rounded-lg p-5 bg-white text-center mx-5 shadow-lg hover:border-blue-700/50 hover:border-2 lg:h-36 lg:mx-5 xl:h-32"
       >
         <h3
-          class="font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4 lg:text-4xl"
+          class="font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4 lg:text-3xl xl:text-2xl"
         >Manage Escape Rooms</h3>
-        <p class="text-lg lg:text-3xl">
+        <p class="text-lg lg:text-2xl xl:text-lg">
           Add, edit, or temporarily disable rooms.
         </p>
 
       </div></a>
 
     <a href="/admin/hours"><div
-        class="flex items-center rounded-lg p-5 bg-white text-center mx-5 shadow-lg lg:h-36 lg:mx-5"
+        class="flex items-center rounded-lg p-5 bg-white text-center mx-5 shadow-lg hover:border-blue-700/50 hover:border-2 lg:h-36 lg:mx-5 xl:h-32"
       >
         <h3
-          class="font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4 lg:text-4xl"
+          class="font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4 lg:text-3xl xl:text-2xl"
         >Manage Business Hours</h3>
-        <p class="text-lg lg:text-3xl">
+        <p class="text-lg lg:text-2xl xl:text-lg">
           Adjust your business hours.
         </p>
 
@@ -67,10 +65,10 @@
   <section class="py-8 grid grid-cols-1 gap-y-8 lg:mx-8 ">
 
     <a href="/admin/notifications"><div
-        class="flex items-center rounded-lg p-5 bg-white text-center mx-5 shadow-lg"
+        class="flex items-center rounded-lg p-5 bg-white text-center mx-5 shadow-lg hover:border-blue-700/50 hover:border-2"
       >
         <h3
-          class="py-5 font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4 md:w-1/3 lg:text-3xl"
+          class="py-5 font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4 md:w-1/3 lg:text-3xl "
         >Notifications</h3>
         <p class="text-lg w-full lg:text-2xl">
           Review latest system notifications and alerts.
@@ -80,10 +78,10 @@
 
     <a href="/admin/analytics">
       <div
-        class="flex items-center text-center rounded-lg p-5 bg-white text-center mx-5 shadow-lg"
+        class="flex items-center text-center rounded-lg p-5 bg-white text-center mx-5 shadow-lg hover:border-blue-700/50 hover:border-2"
       >
         <h3
-          class="py-5 font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4 md:w-1/3 lg:text-3xl"
+          class="py-5 font-semibold text-xl border-r-2 border-gray-300 pr-4 mr-4  md:w-1/3 lg:text-3xl"
         >Analytics</h3>
         <p class="text-lg w-full lg:text-2xl">
           Check your business performance.
