--- a/views/adminHome.handlebars
+++ b/views/adminHome.handlebars
@@ -14,7 +14,7 @@
   <section
     class="py-3 grid grid-cols-1 gap-y-8 md:grid-cols-2 md:mb-24 xl:grid-cols-4 xl:mx-5"
   >
-    <a href="/admin/bookings"><div
+    <a id="bookings" href=""><div
         class="flex items-center rounded-lg p-5 bg-white text-center mx-5 shadow-lg hover:border-blue-700/50 hover:border-2 lg:h-36 lg:mx-5 xl:h-32"
       >
         <h3
@@ -92,3 +92,17 @@
 
   </section>
 </div>
+
+
+<script
+      src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+      integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+      crossorigin="anonymous"
+    ></script>
+
+<script>
+let todaysDate = dayjs().format('YYYY-MM-DD')
+
+$('#bookings').attr('href', `/admin/bookings/${todaysDate}`)
+
+</script>
